Added romgen app to convert ROMs to static data for the emulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 project(emu8080 C)
 
-add_executable(emu8080 main.c)
-
+add_executable(emu8080 main.c disasm.c)
+add_executable(emu8080_tests test_main.c disasm.c)
+add_executable(emu8080_romgen romgen.c)
